--- a/src/templates/puestos.html
+++ b/src/templates/puestos.html
@@ -22,6 +22,7 @@
             <form action="/Puestos" method="post">
                 <div class="modal-body">
                     <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
+                    <input type="hidden" name="token" value="{{ token }}">
                     <div class="mb-3">
                         <label for="BANCO" class="form-label">PUESTO</label>
                         <input type="text" class="form-control" id="PUESTO" name="PUESTO">
