--- a/src/templates/empresas.html
+++ b/src/templates/empresas.html
@@ -22,6 +22,8 @@
             <form action="{{ url_for('empresas') }}" method="post">
                 <div class="modal-body">
                     <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
+                    <input type="hidden" name="token" value="{{ token }}">
+
                     <div class="mb-3">
                         <label for="REPSE" class="form-label">REPSE</label>
                         <input type="text" class="form-control" id="REPSE" name="REPSE">
