--- a/src/templates/altaClientes.html
+++ b/src/templates/altaClientes.html
@@ -165,6 +165,7 @@
                                             <option value="OAXACA">OAXACA</option>
                                             <option value="PUEBLA">PUEBLA</option>
                                             <option value="QUERÉTARO">QUERÉTARO</option>
+                                            <option value="QUINTANA ROO">QUINTANA ROO</option>
                                             <option value="SAN LUIS POTOSÍ">SAN LUIS POTOSÍ</option>
                                             <option value="SIN LOCALIDAD">SIN LOCALIDAD</option>
                                             <option value="SINALOA">SINALOA</option>
