--- a/src/templates/proveedores.html
+++ b/src/templates/proveedores.html
@@ -63,8 +63,8 @@
                     </div>
               
                     <div class="mb-3">
-                        <label for="ht_rfc" class="form-label">RFC</label>
-                        <input type="text" class="form-control" id="ht_rfc" name="ht_rfc">
+                        <label for="RFC" class="form-label">RFC</label>
+                        <input type="text" class="form-control" id="RFC" name="RFC">
                     </div>
                     <div class="mb-3">
                         <label for="ESTATUS" class="form-label">ESTATUS</label>
