--- a/src/templates/edit_proveedor.html
+++ b/src/templates/edit_proveedor.html
@@ -13,6 +13,8 @@
 <br>
 <form class="needs-validation" novalidate action="{{ url_for('edit_proveedor', id=proveedor.id) }}" method="post">
     <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
+    <input type="hidden" name="token" value="{{ token }}">
+
         <div class="container">
             <div  class="d-grid gap-2 d-md-flex justify-content-md-end">
                 <div class="text-center">
