--- a/src/templates/materiales.html
+++ b/src/templates/materiales.html
@@ -46,6 +46,69 @@
         </div>
     </div>
 </div>
+
+<!-- Modal para editar materiales -->
+<div class="modal fade" id="editMaterialesModal" tabindex="-1" aria-labelledby="editMaterialModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="editMaterialModalLabel">EDITAR MATERIAL</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <form id="editMaterialesForm" action="" method="post">
+                    <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
+                    <input type="hidden" id="editMaterialId" name="material_id">
+                    
+                    <!--Debe cambiarse por un select concetado al catalogo de FAMILIA/GRUPO-->
+                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                        <label for="grupo" class="form-label">FAMILIA</label>
+                        <input type="text" class="form-control" id="inputEditFamilia" name="inputEditFamilia" placeholder="Introduzca la Familia" required>
+                        <input type="text" class="form-control" id="inputIdFamilia" name="inputIdFamilia" placeholder="Introduzca la Familia" style="display: none;" required>
+                        <div class="invalid-feedback">
+                            COMPLETA FAMILIA/GRUPO
+                        </div>
+                        <div id="suggestions-edit" class="list-group"></div>
+                    </div>   
+                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                        <label for="descripcion" class="form-label">DESCRIPCION</label>
+                        <input type="text" class="form-control" id="inputDecripcion" name="inputDecripcion" placeholder="Introduzca la Descripcion" required>
+                        <div class="invalid-feedback">
+                            COMPLETA DESCRIPCION
+                        </div>
+                    </div> 
+
+                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                        <label for="medida" class="form-label">UNIDAD DE MEDIDA</label>
+                        <select class="form-control" id="inputEditUOM" name="inputEditUOM" required>
+                            <option value="" disabled selected>Seleccione la Unidad de Medida</option>
+                            <option value="kg">Kilogramo (kg)</option>
+                            <option value="m">Metro (m)</option>
+                            <option value="m2">Metro cuadrado (m²)</option>
+                            <option value="m3">Metro cúbico (m³)</option>
+                            <option value="t">Tonelada (t)</option>
+                            <option value="L">Litro (L)</option>
+                            <option value="gal">Galón (gal)</option>
+                            <option value="pza">Pieza (pza)</option>
+                            <option value="roll">Rollo (roll)</option>
+                            <option value="caja">Caja (caja)</option>
+                            <option value="bob">Bobina (bob)</option>
+                            <option value="ft3">Pie Tablar (ft³)</option>
+                        </select>
+                        <div class="invalid-feedback">
+                            SELECCIONA UNIDAD DE MEDIDA
+                        </div>
+                    </div>
+
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+                        <button type="submit" class="btn btn-primary">Guardar cambios</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
 <!-- INICIA MODAL ALTA MATERIAL -->
 <div class="modal fade" id="altaMaterialModal" tabindex="-1" aria-labelledby="altaMaterialModalLabel"
     aria-hidden="true">
@@ -274,7 +337,11 @@
                                 Acciones
                             </button>
                             <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton{{ m.id }}">
-                                <li><a class="dropdown-item">Editar</a></li>
+                                <li>
+                                    <button class="dropdown-item" data-bs-toggle="modal" data-bs-target="#editMaterialModal" data-material="{{ m.material }}" data-material-id="{{ m.id }}" data-material-familia="{{ m.familia }}" data-material-uom="{{ m.unidad_medida }}">
+                                        EDITAR
+                                    </button>
+                                    <a class="dropdown-item">Editar</a></li>
                                 <li>
                                     <form action="{{ url_for('block_material', id=m.id) }}" method="post"
                                         style="display:inline;">
@@ -293,5 +360,6 @@
     </div>
     <!--FIN TABLA ESPECIALIDAD-->
 </div>
+
 <script src="{{ url_for('static', filename='JS/funciones_materiales.js') }}"></script>
 {% endblock %}
